# tic80-cart-scraper

./: LICENSE  README.md  pyproject.toml  scraper.py
.github/workflows/: python-app.yml
